force-app/main/default/objects/VehicleDefinition/fields/Body_Style__c.field-meta.xml
<CustomField>
    <fullName>Body_Style__c</fullName>
    <description>Used by agent to filter and present models by category.</description>
    <inlineHelpText>filters and present models by category.</inlineHelpText>
    <label>Body Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>