force-app/main/default/objects/VehicleDefinition/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEV (Battery Electric Vehicle)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>