force-app/main/default/objects/VehicleDefinition/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Direct URL to vehicle image used in WhatsApp rich media confirmation card. Must be a publicly accessible HTTPS URL.</description>
    <inlineHelpText>Direct URL to vehicle image used in WhatsApp rich media confirmation card.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>