force-app/main/default/objects/VehicleDefinition/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <description>Important for fleet/family customers asking about capacity during the booking</description>
    <inlineHelpText>Seating capacity</inlineHelpText>
    <label>Seats</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>