force-app/main/default/objects/VehicleDefinition/fields/Test_Drive_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only records with true are returned by VehicleCatalogAction and shown to customers. Prevents booking of unreleased or</description>
    <label>Test Drive Eligible</label>
    <type>Checkbox</type>
</CustomField>