force-app/main/default/objects/VehicleDefinition/listViews/All_VehicleDefinitions.listView-meta.xml
<ListView>
    <fullName>All_VehicleDefinitions</fullName>
    <columns>Name</columns>
    <columns>Product</columns>
    <columns>VehicleClass</columns>
    <columns>Test_Drive_Eligible__c</columns>
    <columns>ExternalReferenceNumber</columns>
    <columns>ModelCode</columns>
    <filterScope>Everything</filterScope>
    <label>All Vehicle Definitions</label>
</ListView>